# EarBug

./: .gitignore  CMakeLists.txt  COMPILING.md  LICENSE  README.md
.github/workflows/: autotag.yml  cmake-single-platform.yml  earbug-develop.yml  earbug.yml
deploy/: EarBug.desktop
earbug/: BaseTheme.h  CMakeLists.txt  DebugLogger.h  EarBug.cpp  EarBug.h  EarBug.qrc  EarBugWindowPosition.h  FormMainWindow.cpp  FormMainWindow.h  FormMainWindow.qrc  FormMainWindow.ui  FormSettingsWindow.cpp  FormSettingsWindow.h  FormSettingsWindow.ui  GlobalSettingsManager.cpp  GlobalSettingsManager.h  Hotkey.h  HotkeySettingsWidget.cpp  HotkeySettingsWidget.h  HotkeySettingsWidget.ui  PulseAudioController.cpp  PulseAudioController.h  Theme.h  WidgetAppVolumeControl.cpp  WidgetAppVolumeControl.h  WidgetAppVolumeControl.ui  main.cpp
earbug/resources/icons/: window_bottom_left_disabled.png~  window_bottom_right_disabled.png~  window_top_left_disabled.png~  window_top_right_disabled.png~
uglobalhotkey/: CMakeLists.txt  uglobalhotkeys.cpp  uglobalhotkeys.h
